# nonebot-plugin-tetris-stats

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.en-US.md  CONTRIBUTING.md  LICENSE  README.md  jinja2-test.py  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: Release.yml  Test.yml  TypeCheck.yml  codeql-analysis.yml
migrations/: env.py
migrations/versions/: 2019c91583fd_.py
nonebot_plugin_tetris_stats/: IODataProcessing.py  MessageAnalyzer.py  SQL.py  TOSDataProcessing.py  __init__.py  version.py
nonebot_plugin_tetris_stats/GameDataProcessor/: IODataProcessor.py  TOPDataProcessor.py  TOSDataProcessor.py  __init__.py
nonebot_plugin_tetris_stats/Utils/: MessageAnalyzer.py  Request.py  SQL.py  __init__.py
nonebot_plugin_tetris_stats/config/: config.py
nonebot_plugin_tetris_stats/config/migrations/: 09d4bb60160d_rename_field.py  0a3ddbc7dd18_init_db.py  0d50142b780f_add_field.py  134153ebc681_init_db.py  1c5346b657d4_fix_json_storage.py  2ff388a8c486_add_verify_field.py  3588702dd3a4_modify_field_length.py  3a294ff14610_add_io_tl_map.py  3c25a5a8c050_refactor_historical.py  3d900bb0e8d4_migrate_nonebot_plugin_tetris_stats_.py  405c6936a164_migrate_nonebot_plugin_tetris_stats_.py  5a1b93948494_add_tetrioleaguestats.py  612d8b00d9ac_create_a_new_table.py  6c3206f90cc3_add_field.py  6ecf383d646a_add_compare_delta_config.py  766cc7e75a62_migrate_to_uninfo.py  8459b2a4b7a3_migrate_nonebot_plugin_tetris_stats_.py  8a91210ce14d_correct_the_data_in_historicaldata.py  9866f53ce44f_init_db.py  9cd1647db502_merge_old_db.py  9f6582279ce2_recreate_historical_data.py  a1195e989cc6_add_tetrio_user_configuration.py  b15844837693_migrate_to_nonobot_plugin_user.py  b2075a5ce371_create_new_tables.py  b27a3a31cb38_add_query_params_to_historical_data.py  b7fbdafc339a_add_user_unique_identifier_field_to_.py  b96c8c18b79a_migrate_nonebot_plugin_tetris_stats_.py  b9d65badc713_del_old_tos_bind_data.py  bbbdfd94e6fa_migrate_nonebot_plugin_tetris_stats_.py  bc6abd57928f_migrate_nonebot_plugin_tetris_stats_.py  ce073d279d19_migrate_nonebot_plugin_tetris_stats_.py  cfeab6961dce_extend_api_type_field_length.py  d61e6ae36586_migrate_nonebot_plugin_tetris_stats_bind.py  e27c73a7a9a8_init_db.py  ee76ae37d70a_migrate_nonebot_plugin_tetris_stats_.py  f5b4a6d1325b_tetr_io_new_season.py
nonebot_plugin_tetris_stats/db/: __init__.py  database.py  models.py  types.py
nonebot_plugin_tetris_stats/game_data_processor/: __init__.py  constant.py  io_data_processor.py  schemas.py  top_data_processor.py  tos_data_processor.py
nonebot_plugin_tetris_stats/game_data_processor/io_data_processor/: __init__.py  bind.py  cache.py  constant.py  model.py  processor.py  query.py  rank.py  request.py
nonebot_plugin_tetris_stats/game_data_processor/io_data_processor/api/: __init__.py  player.py  tetra_league.py
nonebot_plugin_tetris_stats/game_data_processor/io_data_processor/schemas/: base.py  league_all.py  response.py  user.py  user_info.py  user_records.py
nonebot_plugin_tetris_stats/game_data_processor/top_data_processor/: __init__.py  bind.py  constant.py  processor.py  query.py
nonebot_plugin_tetris_stats/game_data_processor/top_data_processor/api/: __init__.py
nonebot_plugin_tetris_stats/game_data_processor/top_data_processor/schemas/: response.py
nonebot_plugin_tetris_stats/game_data_processor/tos_data_processor/: __init__.py  bind.py  constant.py  processor.py  query.py
nonebot_plugin_tetris_stats/game_data_processor/tos_data_processor/api/: models.py
nonebot_plugin_tetris_stats/game_data_processor/tos_data_processor/schemas/: response.py  user_info.py  user_profile.py
nonebot_plugin_tetris_stats/games/: __init__.py  constant.py  schemas.py
nonebot_plugin_tetris_stats/games/tetrio/: __init__.py  bind.py  config.py  constant.py  leagues.py  list.py  models.py  query.py  rank.py  typing.py  unbind.py  verify.py
nonebot_plugin_tetris_stats/games/tetrio/api/: __init__.py  cache.py  leaderboards.py  models.py  player.py  tetra_league.py  typedefs.py  typing.py
nonebot_plugin_tetris_stats/games/tetrio/api/schemas/: base.py  (+4 more)
nonebot_plugin_tetris_stats/games/tetrio/query/: __init__.py  tools.py  v1.py  v2.py
nonebot_plugin_tetris_stats/games/tetrio/rank/: __init__.py  all.py  detail.py
nonebot_plugin_tetris_stats/games/tetrio/record/: __init__.py  blitz.py  sprint.py
nonebot_plugin_tetris_stats/games/top/: __init__.py  bind.py  config.py  constant.py  models.py  query.py  unbind.py
nonebot_plugin_tetris_stats/games/top/api/: models.py  player.py
nonebot_plugin_tetris_stats/games/tos/: __init__.py  bind.py  config.py  constant.py  models.py  query.py  unbind.py
nonebot_plugin_tetris_stats/games/tos/api/: models.py  player.py
nonebot_plugin_tetris_stats/i18n/: .config.json  .lang.schema.json  .template.json  __init__.py  en-US.json  model.py  zh-CN.json
nonebot_plugin_tetris_stats/templates/: __init__.py  bind.html  bind.j2.html  data-v2.html  data-v2.j2.html  data.html  data.j2.html
nonebot_plugin_tetris_stats/templates/css/: bind.css  data-v2.css  data.css
nonebot_plugin_tetris_stats/templates/js/: echarts.js
nonebot_plugin_tetris_stats/utils/: __init__.py  avatar.py  browser.py  chart.py  config.py  database.py  duration.py  exception.py  help_extension.py  help_formatter.py  host.py  image.py  lang.py  limit.py  message_analyzer.py  metrics.py  platform.py  recorder.py  render.py  request.py  retry.py  screenshot.py  sql.py  static.py  templates.py  time_it.py  timezone.py  typedefs.py  typing.py
nonebot_plugin_tetris_stats/utils/render/: __init__.py
nonebot_plugin_tetris_stats/utils/render/avatar/: __init__.py
nonebot_plugin_tetris_stats/utils/render/schemas/: base.py  bind.py  help.py  tetrio_info.py  tetrio_info_v2.py  tetrio_record_base.py  tetrio_record_blitz.py  tetrio_record_sprint.py  tetrio_user_info_v2.py  top_info.py  tos_info.py
tests/: conftest.py  fake_event.py  test_db_types.py  test_help_formatter.py  test_timezone.py  test_utc_cutover_queries.py
tests/tetrio/: test_bind.py
(+65 files in other folders)
